--- a/ruleset/coraza.conf
+++ b/ruleset/coraza.conf
@@ -235,3 +235,4 @@ SecAuditLogParts ABIJDEFHZ
 SecAuditLogType concurrent
 SecAuditLogFormat JSON
 SecAuditLogDir /audit/
+SecAuditLog "/audit/audit.log"
